<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/set_lin1"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:text="@string/set"
        android:gravity="center"
        android:textColor="@color/white"
        android:paddingTop="10dp"
        android:textSize="20sp"
        android:background="@drawable/background_title" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/set_lin1">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TableLayout

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:stretchColumns="0"
                android:padding="20dp">

                <TableRow android:id="@+id/set_table1">

                    <TextView
                        android:text="@string/set_item1"
                        style="@style/set_text" />

                    <TextView
                        android:id="@+id/set_name"
                        style="@style/set_text" />

                    <ImageView
                        android:layout_height="match_parent"
                        android:src="@drawable/jiantou" />
                </TableRow>

                <TextView style="@style/set_lin" />

                <TableRow android:id="@+id/set_table2">

                    <TextView
                        android:text="@string/set_item2"
                        style="@style/set_text" />

                    <ImageView
                        android:layout_width="60dp"
                        android:layout_height="56dp"
                        android:layout_margin="2dp"
                        android:id="@+id/set_userpic" />

                    <ImageView
                        android:layout_height="match_parent"
                        android:src="@drawable/jiantou" />
                </TableRow>

                <TextView style="@style/set_lin" />

                <TableRow android:id="@+id/set_table3">

                    <TextView
                        android:text="@string/set_item3"
                        style="@style/set_text" />

                    <TextView style="@style/set_text" />

                    <ImageView
                        android:layout_height="match_parent"
                        android:src="@drawable/jiantou" />
                </TableRow>

                <TextView style="@style/set_lin" />

                <TableRow android:id="@+id/set_table4">

                    <TextView
                        android:text="@string/set_item4"
                        style="@style/set_text" />

                    <TextView style="@style/set_text" />

                    <ImageView
                        android:layout_height="match_parent"
                        android:src="@drawable/jiantou" />
                </TableRow>

                <TextView style="@style/set_lin" />

                <TableRow android:id="@+id/set_table5">

                    <TextView
                        android:text="@string/set_item5"
                        style="@style/set_text" />

                    <TextView style="@style/set_text" />

                    <ImageView
                        android:layout_height="match_parent"
                        android:src="@drawable/jiantou" />
                </TableRow>

                <TextView style="@style/set_lin" />

                <TableRow android:id="@+id/set_table6">

                    <TextView
                        android:text="@string/set_item6"
                        style="@style/set_text" />

                    <TextView style="@style/set_text" />

                    <ImageView
                        android:layout_height="match_parent"
                        android:src="@drawable/jiantou" />
                </TableRow>

                <TextView style="@style/set_lin" />
            </TableLayout>

            <com.dd.CircularProgressButton
                android:id="@+id/set_logout"
                android:layout_width="196dp"
                android:layout_height="50dp"
                app:cpb_cornerRadius="48dp"
                app:cpb_paddingProgress="10dp"
                android:layout_marginBottom="80dp"
                android:textSize="@dimen/login_text"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="20dp"
                android:textColor="@color/white"
                app:cpb_selectorIdle="@drawable/progressbutton_idle"
                app:cpb_selectorComplete="@drawable/progressbutton_complete"
                app:cpb_selectorError="@drawable/progressbutton_error"

                app:cpb_textComplete="@string/set_item8"
                app:cpb_textError="@string/set_item8"
                app:cpb_textIdle="@string/set_item7" />
        </LinearLayout>
    </ScrollView>
</RelativeLayout>