<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:gravity="center"
            android:text="@string/historicaltask"
            android:background="@drawable/background_title" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="20dp"
            android:orientation="horizontal"
            android:gravity="center_horizontal">

            <LinearLayout
                android:id="@+id/his_item1"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginRight="10dp"
                android:gravity="center_horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/historicaltask_item1" />

                <ImageView
                    android:id="@+id/his_tag1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/his_tag" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/his_item2"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginRight="10dp"
                android:gravity="center_horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/historicaltask_item2" />

                <ImageView
                    android:id="@+id/his_tag2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/his_tag"
                    android:visibility="gone" />
            </LinearLayout>
        </LinearLayout>

        <ListView
            android:id="@+id/his_list"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        </ListView>
    </LinearLayout>

    <com.mingle.widget.LoadingView
        app:loadingText="@string/loading"
        android:id="@+id/loadView"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_below="@+id/toolbar_list"
        android:visibility="gone"
        android:background="@color/gray" />

    <TextView
        android:id="@+id/onemoretime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:textColor="@color/green"
        android:textSize="20sp"
        android:visibility="gone"
        android:text="@string/onemoretime" />
</RelativeLayout>