<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/menu_3"
                android:layout_width="@dimen/menu_image"
                android:layout_height="@dimen/menu_image"
                android:layout_centerVertical="true"
                android:layout_marginTop="@dimen/menu_marginTop"
                android:src="@drawable/menu_item3_selector" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/menu_3"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="10dp"
                android:text="@string/menu_item3"
                android:textColor="@color/white"
                android:textSize="@dimen/menu_textSize" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/menu_1"
                android:layout_width="@dimen/menu_image"
                android:layout_height="@dimen/menu_image"
                android:layout_centerVertical="true"
                android:layout_marginTop="@dimen/menu_marginTop"
                android:src="@drawable/menu_item1_selector" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/menu_1"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="10dp"
                android:text="@string/menu_item1"
                android:textColor="@color/white"
                android:textSize="@dimen/menu_textSize" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/menu_2"
                android:layout_width="@dimen/menu_image"
                android:layout_height="@dimen/menu_image"
                android:layout_centerVertical="true"
                android:layout_marginTop="@dimen/menu_marginTop"
                android:src="@drawable/menu_item2_selector" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/menu_2"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="10dp"
                android:text="@string/menu_item2"
                android:textColor="@color/white"
                android:textSize="@dimen/menu_textSize" />
        </RelativeLayout>


        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/menu_4"
                android:layout_width="@dimen/menu_image"
                android:layout_height="@dimen/menu_image"
                android:layout_centerVertical="true"
                android:layout_marginTop="@dimen/menu_marginTop"
                android:src="@drawable/menu_item4_selector" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/menu_4"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="10dp"
                android:text="@string/menu_item4"
                android:textColor="@color/white"
                android:textSize="@dimen/menu_textSize" />
        </RelativeLayout>
    </LinearLayout>

</RelativeLayout>